Transpiler: Anpassungen zum Detektieren von Variablendeklarationen mit dem var-Schlüsselwort